# cpython-portable

./: CMakeLists.txt  README.md  config.c  posixmodule.c  pyconfig.h.in  socketmodule.c
